turnkey-punbb-15.0 (1) turnkey; urgency=low

  * Patched to be compatible with PHP7 (via 3rd party community patches - see
    https://punbb.info/t-1010.html (Russian).

  * Install Adminer directly from stretch/main repo

  * Provide "adminer" root-like user for Adminer MySQL access

  * Replace MySQL with MariaDB (drop-in MySQL replacement)

  * Updated version of mysqltuner script

  * Includes PHP7.0 (installed from Debian repos)

  * Updated PHP default settings

  * Remove phpsh (no longer maintained)

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specdific to this appliance.

 -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Wed, 29 Nov 2017 16:34:42 +0200

turnkey-punbb-14.2 (1) turnkey; urgency=low

  * Updated Adminer to 4.2.5

  * Upstream source component versions:
    
    punbb           1.4.4

  * Installed security updates.

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Stefan Davis <stefan@turnkeylinux.org>  Mon, 20 Mar 2017 09:38:53 +1100

turnkey-punbb-14.1 (1) turnkey; urgency=low

  * Installed security updates.

  * Installed updated packages from TurnKey repo
      - includes relevant Webmin packages (v1.780)

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Tue, 01 Mar 2016 04:15:15 +0000

turnkey-punbb-14.0 (1) turnkey; urgency=low

  * Upstream source component versions:

    punbb           1.4.3

  * Replaced PHPMyAdmin with Adminer

  * Hardened default SSL settings

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Stefan Davis <nafets.sivad@gmail.com>  Tue, 23 Jun 2015 05:28:30 +0000
