@@ -4,12 +4,18 @@ ServerName localhost
     UseCanonicalName Off
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/punbb/
+    RewriteEngine On
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^/(.*) https://www.example.com/$1 [R,L]
 </VirtualHost>
 
 <VirtualHost *:443>
     SSLEngine on
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/punbb/
+    RewriteEngine On
+    RewriteCond %{HTTP_HOST} ^\d+\.
+    RewriteRule ^/(.*) https://www.example.com/$1 [R,L]
 </VirtualHost>
 
 <Directory /var/www/punbb/>
