@@ -3,6 +3,8 @@ turnkey-punbb-15.0 (1) turnkey; urgency=low
   * Patched to be compatible with PHP7 (via 3rd party community patches - see
     https://punbb.info/t-1010.html (Russian).
 
+  * Redirect IP to domain (set at firstboot) and all traffic to https.
+
   * Install Adminer directly from stretch/main repo
 
   * Provide "adminer" root-like user for Adminer MySQL access
